# toying_around

./: Cargo.toml  README.md  Trunk.toml  index.html  rust-analyzer.toml  tailwind.config.js
.cargo/: config.toml
src/: main.rs
src-tauri/: Cargo.toml  tauri.appstore.conf.json  tauri.conf.json
src-tauri/src/: main.rs
src/bevy_app/: setup.rs  systems.rs
