[package]
name = "thing-app-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16", features = [
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_window",
    "bevy_winit",
    "tonemapping_luts",
    "webgl2",
] }
bevy-inspector-egui = "0.32"
bevy_rand = { version = "0.11", features = ["wyrand"] }
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
leptos = { version = "0.8", features = ["csr"] }
leptos-bevy-canvas = { version = "0.3" }
leptos-use = "0.16"
rand_core = "0.9.3"
meshtext = "0.3.1"
web-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
uuid = { version = "1.17", features = ["rng-getrandom"] }

[workspace]
members = ["src-tauri"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
